examples/good/11_1_function_returning different_types.soy
def f(a = int, b = str, c = bool) -> int {
    return a;
}

def g(a = int, b = str, c = bool) -> str {
    return b;
}

def h(a = int, b = str, c = bool) -> bool {
    return c;
}

print(f(1, "a", True));
print(g(1, "a", True));
print(h(1, "a", True));
print("11_1_PASSED");