examples/bad/04_1_wrong_print.soy
# Empty function call is not allowed
print();

# Printing a function is not allowed
def f() -> int {
    return 1;
}

print(f);